--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js'></script>
-		<script src="js/index.js"></script>
+		<script src="js/fireflies.js"></script>
 
 		<!-- Modern Chrome won't autoplay so here's a hack -->
 		<iframe src="sounds/cicada-at-night.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
