--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Fireflies and Cicadas in summer.</title>
 		<link rel="stylesheet" href="css/style.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.js"></script>
 	</head>
 
 	<body>
@@ -12,12 +13,15 @@
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js'></script>
 		<script src="js/fireflies.js"></script>
+		<script>
+			var sound = new Howl({
+				src: ['sounds/cicada-at-night.mp3'],
+				autoplay: true,
+				loop: true,
+				volume: 0.5,
+			});
 
-		<!-- Modern Chrome won't autoplay so here's a hack -->
-		<iframe src="sounds/cicada-at-night.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
-
-		<audio autoplay loop>
-			<source src="sounds/cicada-at-night.mp3" type="audio/mp3">
-		</audio>
+			sound.play();
+		</script>
 	</body>
 </html>
