--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<body>
 		<div class="container"></div>
 
+		<!-- Chrome doen't autoplay. This fixes it! -->
+		<iframe src="sounds/silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js'></script>
 		<script src="js/fireflies.js"></script>
