--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Fireflies and Cicadas in summer.</title>
-		<link rel="stylesheet" href="css/style.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.js"></script>
-	</head>
 
-	<body>
+<head>
+	<meta charset="UTF-8">
+	<title>Fireflies and Cicadas in summer.</title>
+	<link rel="stylesheet" href="css/style.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.js"></script>
+</head>
+
+<body>
+	<div id="nighttimeForestBackground">
 		<div class="container"></div>
-
 		<!-- Chrome doen't autoplay. This fixes it! -->
 		<iframe src="sounds/silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
@@ -25,5 +25,7 @@
 
 			sound.play();
 		</script>
-	</body>
+	</div>
+</body>
+
 </html>
